--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.0.3",
+    "@reduxjs/toolkit": "^1.8.6",
     "core-js": "^3.6.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-redux": "^8.0.4",
+    "redux": "^4.2.0",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0"
@@ -31,7 +34,7 @@
     "@nrwl/workspace": "15.0.3",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.7.18",
     "@types/react": "18.0.20",
     "@types/react-dom": "18.0.6",
     "@types/react-is": "17.0.3",
