--- a/libs/soteste/project.json
+++ b/libs/soteste/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "apps-teste",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/apps/teste/src",
+  "name": "soteste",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/soteste/src",
   "projectType": "library",
   "tags": [],
   "targets": {
@@ -9,14 +9,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["libs/apps/teste/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": ["libs/soteste/**/*.{ts,tsx,js,jsx}"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/apps/teste/jest.config.ts",
+        "jestConfig": "libs/soteste/jest.config.ts",
         "passWithNoTests": true
       }
     }
