done: install react-hook-forms and yup and any components

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@mono/react-ui/shared": ["libs/react-ui/shared/src/index.ts"],
       "@mono/soteste": ["libs/soteste/src/index.ts"]
     }
   },
