--- a/libs/shared/react-ui/src/project.json
+++ b/libs/shared/react-ui/src/project.json
@@ -1,7 +1,7 @@
 {
   "name": "react-ui-shared",
-  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/react-ui/shared/src",
+  "$schema": "../../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "src",
   "projectType": "library",
   "tags": [],
   "targets": {
