--- a/package.json
+++ b/package.json
@@ -9,22 +9,28 @@
   },
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.16.0",
     "@emotion/cache": "^11.10.5",
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.10.9",
+    "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
+    "@mui/x-date-pickers": "^5.0.6",
     "@nrwl/next": "15.0.3",
     "@reduxjs/toolkit": "^1.8.6",
     "core-js": "^3.6.5",
+    "date-fns": "^2.29.3",
     "next": "12.3.1",
     "react": "18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.38.0",
     "react-is": "18.2.0",
     "react-redux": "^8.0.4",
+    "react-window": "^1.8.7",
     "redux": "^4.2.0",
     "regenerator-runtime": "0.13.7",
     "styled-components": "5.3.5",
@@ -47,8 +53,10 @@
     "@types/jest": "28.1.1",
     "@types/node": "18.7.18",
     "@types/react": "18.0.20",
+    "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
     "@types/react-is": "17.0.3",
+    "@types/react-window": "^1.8.5",
     "@types/styled-components": "5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
