--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.6",
+    "@nestjs/common": "^9.0.0",
+    "@nestjs/core": "^9.0.0",
+    "@nestjs/platform-express": "^9.0.0",
     "@nrwl/next": "15.0.3",
     "@reduxjs/toolkit": "^1.8.6",
     "core-js": "^3.6.5",
@@ -32,17 +35,23 @@
     "react-redux": "^8.0.4",
     "react-window": "^1.8.7",
     "redux": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
     "regenerator-runtime": "0.13.7",
+    "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@nestjs/schematics": "^9.0.0",
+    "@nestjs/testing": "^9.0.0",
     "@nrwl/cli": "15.0.3",
     "@nrwl/cypress": "15.0.3",
     "@nrwl/eslint-plugin-nx": "15.0.3",
-    "@nrwl/jest": "15.0.3",
+    "@nrwl/jest": "15.0.4",
     "@nrwl/linter": "15.0.3",
+    "@nrwl/nest": "15.0.4",
+    "@nrwl/node": "15.0.4",
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.0.3",
     "@nrwl/web": "15.0.3",
@@ -51,7 +60,7 @@
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.18",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.20",
     "@types/react-datepicker": "^4.4.2",
     "@types/react-dom": "18.0.6",
