--- a/package.json
+++ b/package.json
@@ -19,14 +19,28 @@
     "@mui/lab": "^5.0.0-alpha.105",
     "@mui/material": "^5.10.11",
     "@mui/x-date-pickers": "^5.0.6",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs-query/query-graphql": "^0.30.0",
+    "@nestjs-query/query-typeorm": "^0.30.0",
+    "@nestjs/apollo": "^10.1.4",
+    "@nestjs/common": "^9.1.6",
+    "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^10.1.5",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@nrwl/next": "15.0.3",
     "@reduxjs/toolkit": "^1.8.6",
+    "apollo-server-express": "^3.11.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "core-js": "^3.6.5",
+    "dataloader": "^2.1.0",
     "date-fns": "^2.29.3",
+    "graphql": "^16.6.0",
+    "graphql-subscriptions": "^2.0.0",
     "next": "12.3.1",
+    "pg": "^8.8.0",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
@@ -40,6 +54,7 @@
     "rxjs": "^7.0.0",
     "styled-components": "5.3.5",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.10",
     "yup": "^0.32.11"
   },
   "devDependencies": {
